First draft adding some sensors using pymdobus to read values

--- a/custom_components/sma_charge_ctrl/manifest.json
+++ b/custom_components/sma_charge_ctrl/manifest.json
@@ -4,7 +4,7 @@
   "codeowners": [
     "@engelchrisi"
   ],
-  "config_flow": true,
+  "config_flow": false,
   "dependencies": [],
   "integration_type": "helper",
   "documentation": "https://github.com/engelchrisi/sma_charge_ctrl",
