First config working

--- a/custom_components/sma_charge_ctrl/manifest.json
+++ b/custom_components/sma_charge_ctrl/manifest.json
@@ -1,17 +1,16 @@
 {
   "domain": "sma_charge_ctrl",
-  "name": "SMA Charge Controller",
+  "name": "Chrisi Test",
   "codeowners": [
     "@engelchrisi"
   ],
-  "config_flow": false,
+  "config_flow": true,
   "dependencies": [],
-  "integration_type": "helper",
   "documentation": "https://github.com/engelchrisi/sma_charge_ctrl",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/engelchrisi/sma_charge_ctrl/issues",
   "requirements": [
     "pymodbus"
   ],
-  "version": "0.1.1"
+  "version": "0.1.2"
 }
