--- a/custom_components/sma_charge_ctrl/manifest.json
+++ b/custom_components/sma_charge_ctrl/manifest.json
@@ -1,13 +1,13 @@
 {
   "domain": "sma_charge_ctrl",
-  "name": "Chrisi Test",
+  "name": "SMA Charge Controller",
   "codeowners": [
     "@engelchrisi"
   ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/engelchrisi/sma_charge_ctrl",
-  "iot_class": "cloud_polling",
+  "integration_type": "hub",
   "issue_tracker": "https://github.com/engelchrisi/sma_charge_ctrl/issues",
   "requirements": [
     "pymodbus"
