--- a/custom_components/sma_charge_ctrl/services.yaml
+++ b/custom_components/sma_charge_ctrl/services.yaml
@@ -5,6 +5,10 @@ battery_start_charging_from_net:
       description: Power in W to load from net. If negative then max value is taken.
       default: -1
       example: "3680"
+      
+battery_start_charging_from_pv:
+  description: Start the battery loading from PV + discharging.
+
 battery_stop_charging_from_net:
   fields:
     discharge_power:
